Version 2.0.3: Support for latest Gradle version and OrderedProperties; Removed jCentral; Using new plugin for Gradle Plugin Portal publication.